--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <br>
     <a class="waves-effect waves-light black btn-large">Generate</a>
 
-    <div id="root"></div>
+    <div class="card" id="job">Class: </div>
+    <div id="name"></div>
+    <div id="race"></div>
+    <br>
     <script src="scripts.js"></script>
 </body>
 </html>
